--- a/src/App.css
+++ b/src/App.css
@@ -221,6 +221,24 @@ footer {
   margin-bottom: 20px;
 }
 
+.searchTask,
+.searchTask-dark {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 450px;
+  margin: 20px auto;
+}
+
+.search-task-input {
+  width: 100%;
+  background-color: #f2f7fd;
+  border: blue 1px solid;
+  border-radius: 3px;
+  padding: 10px;
+  height: 50px;
+}
+
 @media (max-width: 1200px) {
   .container {
     width: 100%;
